<resources>
    <string name="about">About</string>
    <string name="accessibility_level">Accessibility Level</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="page_arrows_basic_mode">Page arrows in basic mode</string>
    <string name="page_arrows_basic_mode_subtext">Show previous and next arrows even when swipe navigation is enabled.</string>
    <string name="accidental_touches">Accidental Touch Guard</string>
    <string name="accidental_touches_settings_subtext">This guard prevents touches when the phone is covered. If you experience issues, you can turn it off.</string>
    <string name="accidental_touches_subtext">Accidental touch detected.\nPress OK to continue using the phone.\nIf this message keeps appearing, you can disable the feature in Accessibility settings.</string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_quickly">Add Timer</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_emergency_contact">Add</string>
    <string name="add_pill">Add Pill</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_home">Add to Home</string>
    <string name="add_to_speed_dial">Add to speed dial</string>
    <string name="remove_from_speed_dial">Remove from speed dial</string>
    <string name="call_label">Call</string>
    <string name="speed_dial_full">Speed dial is full (max 8 entries)</string>
    <string name="select_phone_number">Select phone number</string>
    <string name="speed_dial_added">Added to speed dial</string>
    <string name="speed_dial_removed">Removed from speed dial</string>
    <string name="speed_dial_error">Failed to update speed dial</string>
    <string name="home_added">Added to Home</string>
    <string name="home_removed">Removed from Home</string>
    <string name="add_to_sos">Add to SOS</string>
    <string name="add_as_an_emergency_contact">Add %s as your SOS emergency contact?</string>
    <string name="address">Address</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="afternoon">Afternoon</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_volume_subtext">Choose Volume for Alarms.\nVolume increases from left to right.</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_repeats_every">Alarm repeats every</string>
    <string name="all_alarms">All Alarms</string>
    <string name="allow">Allow</string>
    <string name="already_setted">Already set!\nTap here to switch to it.</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="and_welcome_to_baldphone">and welcome to Baldphone</string>
    <string name="apps">Apps</string>
    <string name="are_you_sure_you_want_to_delete___">Are you sure you want to delete %s?</string>
    <string name="assistant">Assistant</string>
    <string name="at_least_one_day_must_be_selected">At least one day must be selected!</string>
    <string name="auto_brightness">Auto\nBrightness</string>
    <string name="backspace">backspace</string>
    <string name="baldphone_bla_allow_permission">Please allow the following permissions:</string>
    <string name="blocked">Blocked</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_subtext">Change brightness</string>
    <string name="cache_cleared_successfully">Cache Cleared Successfully!</string>
    <string name="call">Call</string>
    <string name="calling">Calling...</string>
    <string name="call_log">Call Log:</string>
    <string name="call_subtext">This permission is required in order to call contacts.</string>
    <string name="camera">Camera</string>
    <string name="camera_subtext">This permission is required to use the flashlight.</string>
    <string name="cancel">Cancel</string>
    <string name="change_pills_time">Change Pills Time</string>
    <string name="change_system_settings_subtext">Please allow BaldPhone to change settings, such as font size and screen brightness.</string>
    <string name="choose_friday">Fri</string>
    <string name="choose_monday">Mon</string>
    <string name="choose_saturday">Sat</string>
    <string name="choose_sunday">Sun</string>
    <string name="choose_thursday">Thu</string>
    <string name="choose_tuesday">Tue</string>
    <string name="choose_wednesday">Wed</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_subtext">Are you sure you want to clear the cache? This may fix some issues, but shortcuts on the Home screen will be removed.</string>
    <string name="clear_data">Clear All Data</string>
    <string name="clear_data_subtext">Deletes all user data and settings.\nBaldPhone will return to its default state, as if freshly installed.</string>
    <string name="clear_data_subtext2">100%?</string>
    <string name="clear_data_subtext3">Are you sure? Pressing Yes will delete all data!</string>
    <string name="clock">Clock</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="connection_settings">Connectivity</string>
    <string name="contact_must_has_name">Contact must have a Name</string>
    <string name="contact_details">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="search_contact">Search contact by name</string>
    <string name="contacts_read_subtext">This permission is required in order to read contacts.</string>
    <string name="contacts_subtext">This permission is required in order to add new contacts.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="pasted_from_clipboard">Pasted from clipboard</string>
    <string name="crash">Something went wrong.\nRestarting in a few seconds…</string>
    <string name="current_time">Current Time</string>
    <string name="custom">Custom</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete___">Delete %s?</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="dialer">Dialer</string>
    <string name="display_settings">Display &amp; Appearance</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="edit">Edit</string>
    <string name="email">Email:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="enable_notification_access_subtext">Please give BaldPhone access to notifications.</string>
    <string name="enter">Enter</string>
    <string name="enter_contact_or_phone_number">Enter contact name:</string>
    <string name="evening">Evening</string>
    <string name="every_3_hours">Every 3 hours</string>
    <string name="example_of_different_text_sizes">"Example of different text sizes.\nShould be readable and not overflow."</string>
    <string name="extra_1">Extra 1</string>
    <string name="extra_2">Extra 2</string>
    <string name="extra_3">Extra 3</string>
    <string name="external_storage_subtext">This permission is required in order to save pictures.</string>
    <string name="favorites">Favorites</string>
    <string name="feedback">Feedback &amp; Support</string>
    <string name="feedback_advanced">Advanced</string>
    <string name="feedback_cannot_be_empty">Please enter your feedback before sending.</string>
    <string name="feedback_choose_email_app">Select an email app</string>
    <string name="feedback_email_subject">Feedback for %s</string>
    <string name="feedback_hint">Write your message here…</string>
    <string name="feedback_no_email_app_found">No app available to send email.</string>
    <string name="feedback_send">Send Email</string>
    <string name="feedback_subtitle">Share feedback or report a problem to help improve BaldPhone Neo.</string>
    <string name="feedback_include_info">Include technical details (recommended)</string>
    <string name="first_please_select_how_you_want_to_interact_with_buttons">Please choose your preferred accessibility level.</string>
    <string name="font_size">Font Size</string>
    <string name="friday">Friday</string>
    <string name="have_hard_time_using_the_phone_s_keyboard_use_baldphone_s_big_keyboard_instead">Having trouble using your phone’s keyboard?\nTry BaldPhone’s BIG keyboard instead!</string>
    <string name="hello">Hello</string>
    <string name="help">Video Tutorial</string>
    <string name="hide">Hide</string>
    <string name="high_level">High Level</string>
    <string name="home_phone_number">Home phone number</string>
    <string name="hour">Hour</string>
    <string name="huge">Huge</string>
    <string name="internet">Internet</string>
    <string name="invoked_in">Invoked in:</string>
    <string name="it_s_highly_recommended_to_use_baldphone_s_home_screen_as_the_default_home_launcher">It’s highly recommended to set BaldPhone as your default home screen.</string>
    <string name="language">Language</string>
    <string name="language_settings">Languages</string>
    <string name="large">Large</string>
    <string name="left_handed">Left Handed</string>
    <string name="light">Light</string>
    <string name="location">Location</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="mail">Mail</string>
    <string name="maps">Maps</string>
    <string name="medium">Medium</string>
    <string name="medium_level">Medium Level</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="missed">Missed</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="monday">Monday</string>
    <string name="more">More</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="named__">named</string>
    <string name="new_alarm___was_created">new alarm %s was created!</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="notes_settings">Notes</string>
    <string name="notes_settings_subtext">Enable or disable the Notes page on the home screen.</string>
    <string name="photos">Photos</string>
    <string name="pills">Pills</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="sos">SOS</string>
    <string name="videos">Videos</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="what_s_new">What\'s new</string>
    <string name="label_lock_screen_short">Lock Screen</string>
    <string name="about_overview_section">Learn More</string>
    <string name="about_tag_line">A simple launcher that combines calling, messaging, and everyday features into one easy-to-use experience.</string>
    <string name="about_web_page">GitHub Project</string>
    <string name="about_faq">FAQ / Help</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits">Contributors &amp; Translators</string>
    <string name="about_legal_title">Licenses &amp; Privacy</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_app_license">App License</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="no_messages">No messages yet</string>
    <string name="new_message">New Message</string>
</resources>