<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/home_screen_padding"
    android:paddingTop="10dp"
    android:paddingRight="@dimen/home_screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_settings"
            style="@style/HomeButtonTile.AccentGreen"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/settings_on_button"
            app:__text="@string/settings" />

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_apps"
            style="@style/HomeButtonTile.AccentGreen"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/apps_on_background"
            app:__text="@string/apps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_internet"
            style="@style/HomeButtonTile.AccentBlue"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/web_on_button"
            app:__text="@string/internet" />

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_photo"
            style="@style/HomeButtonTile.AccentBlue"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/photo_on_button"
            app:__text="@string/photos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_maps"
            style="@style/HomeButtonTile.AccentBlue"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/map_on_button"
            app:__text="@string/maps" />

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_videos"
            style="@style/HomeButtonTile.AccentBlue"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/movie_on_background"
            app:__text="@string/videos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_pills"
            style="@style/HomeButtonTile.AccentPurple"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/pill"
            app:__text="@string/pills" />

        <com.bald.uriah.baldphone.views.FirstPageAppIcon
            android:id="@+id/bt_alarms"
            style="@style/HomeButtonTile.AccentPurple"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:__src="@drawable/clock_on_background"
            app:__text="@string/alarms" />

    </LinearLayout>

</LinearLayout>
