<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?bald_background"
    android:orientation="vertical">

    <app.baldphone.neo.views.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarBackgroundColor="@color/color_3"
        app:titleBarTitle="@string/feedback" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/BackgroundText.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:paddingVertical="12dp"
                android:text="@string/feedback_subtitle"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/feedback_input"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="none"
                android:background="?attr/bald_edit_text_bg"
                android:gravity="top|start"
                android:hint="@string/feedback_hint"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textAlignment="viewStart"
                android:textColor="?attr/bald_text_on_background"
                android:textColorHint="#657985"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/feedback_include_info_checkbox"
                style="@style/BackgroundText.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:buttonTint="@color/blue"
                android:checked="false"
                android:text="@string/feedback_include_info" />

            <com.bald.uriah.baldphone.views.BaldButton
                android:id="@+id/feedback_send_button"
                style="@style/Bald.Button.FullWidth"
                android:text="@string/feedback_send" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
