<?xml version="1.0" encoding="utf-8"?><!-- SPDX-License-Identifier: Apache-2.0 -->
<!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~ Copyright 2025 Damian Kuzmiak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/page1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/home_screen_padding"
    android:gravity="center_horizontal"
    android:baselineAligned="false">

    <!-- Notifications + Clock area (larger) -->
    <include
        android:id="@+id/notification_area_container"
        layout="@layout/notification_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" />

    <!-- Buttons area -->
    <LinearLayout
        android:id="@+id/buttons_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center"
        android:baselineAligned="false">

        <!-- Speed dial row -->
        <LinearLayout
            android:id="@+id/row_speed_dial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="6dp"
            android:visibility="gone">

            <include
                android:id="@+id/sd_slot_0"
                layout="@layout/home_screen_app_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <include
                android:id="@+id/sd_slot_1"
                layout="@layout/home_screen_app_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <include
                android:id="@+id/sd_slot_2"
                layout="@layout/home_screen_app_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone" />
        </LinearLayout>

        <!-- First row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="6dp">

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_contacts"
                style="@style/HomeButtonTile.AccentGreen"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/human_on_background"
                app:__text="@string/contacts" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_recent"
                style="@style/HomeButtonTile.AccentGreen"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/history_on_background"
                app:__text="@string/recent" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_dialer"
                style="@style/HomeButtonTile.AccentGreen"
                app:__src="@drawable/phone_on_background"
                app:__text="@string/dialer" />
        </LinearLayout>

        <!-- Second row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="6dp">

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_camera"
                style="@style/HomeButtonTile.AccentBlue"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/camera_on_background"
                app:__text="@string/camera" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_whatsapp"
                style="@style/HomeButtonTile.AccentBlue"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/whatsapp_on_background"
                app:__text="@string/whatsapp" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_messages"
                style="@style/HomeButtonTile.AccentBlue"
                app:__src="@drawable/message_on_background"
                app:__text="@string/messages" />
        </LinearLayout>

        <!-- Third row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_emergency"
                style="@style/HomeButtonTile.AccentPurple"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/emergency"
                app:__text="@string/sos" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_assistant"
                style="@style/HomeButtonTile.AccentPurple"
                android:layout_marginEnd="8dp"
                app:__src="@drawable/voice_on_background"
                app:__text="@string/assistant" />

            <com.bald.uriah.baldphone.views.FirstPageAppIcon
                android:id="@+id/bt_lock_screen"
                style="@style/HomeButtonTile.AccentPurple"
                app:__src="@drawable/icon_lock_outline"
                app:__text="@string/label_lock_screen_short" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
